=========================================================================
CHANGE LOG
=========================================================================

2008-04-25 Warren L. DeLano <warren@delsci.com>	

	* adjusted save behavior so that selections exclusively comprised
	  of static singleton atoms are written out even when the global
	  state index is not unity
	
	* changed behavior of multiplex=0 option for concatenated PDBs
	
2008-04-23 Warren L. DeLano <warren@delsci.com>	

	* made additional tweaks to command flushing
	
2008-04-23 Warren L. DeLano <warren@delsci.com>	

	* fixed more logging-related bugs

	* optimized command-queue flushing for better performance

2008-04-19 Warren L. DeLano <warren@delsci.com>	

	* added support for PDB formal charges.
	
2008-04-17 Warren L. DeLano <warren@delsci.com>	

	* fixed bug with GL_BLEND for distance labels

	* repaired proper logging for various selection-related actions

	* migrated to session-based storage for the measurement wizard
	
2008-04-16 Warren L. DeLano <warren@delsci.com>	

	* tweaked behaviors for better ActiveX usage

	* ESC now exits presentation mode (instead of toggling text)
	
2008-04-12 Warren L. DeLano <warren@delsci.com>	

	* added new movie program menus
	
2008-04-11 Warren L. DeLano <warren@delsci.com>	

	* added vdw radii for additional elements
	
	* fixed problem with saving session/show file ext on Windows.
	
2008-04-04 Warren L. DeLano <warren@delsci.com>	

	* fixed exception on windows when home directory is inaccessible
	
2008-03-31 Warren L. DeLano <warren@delsci.com>	

	* scene_order command 
	
	* improved hash compatibility for cached surfaces
	
	* $PYMOL_DATA now used instead of $PYMOL_PATH for align matrix
	
2008-03-28 Warren L. DeLano <warren@delsci.com>	

	* Cleaned up a launch issue under Centos 4.5

	* Accomodating default Gnome Panel window positioning under Linux
	
2008-03-27 Warren L. DeLano <warren@delsci.com>	

	* Fixed quicky group-dragging behavior
	