@@ -15,7 +15,9 @@ api_list = [
     'bg_color',
     'bond',
     'button',
-    'cartoon',
+    'cache',
+    'cartoon',    
+    'capture',
     'cd',
     'center',
     'check',
